# sha256-benchmark

./: .gitignore  README.md  bench.sh
cairo/: Makefile  Scarb.toml  prover_params.json
cairo/data/: args_1024.txt  args_128.txt  args_16384.txt  args_2048.txt  args_256.txt  args_32.txt  args_4096.txt  args_512.txt  args_64.txt  args_8192.txt
cairo/scripts/: generate_args.py  generate_params.py
cairo/src/: lib.cairo
cairo0/: Makefile
cairo0/data/: args_1024.json  args_128.json  args_16384.json  args_2048.json  args_256.json  args_32.json  args_32768.json  args_4096.json  args_512.json  args_64.json  args_65536.json  args_8192.json
cairo0/src/: lib.cairo
circom/: Makefile  README.md  main.circom
risc0/: Cargo.toml  Makefile
risc0/methods/: Cargo.toml
risc0/methods/guest/: Cargo.toml
risc0/methods/guest/src/: main.rs
risc0/src/: main.rs
sp1/: Makefile
sp1/elf/: riscv32im-succinct-zkvm-elf
sp1/program/: Cargo.toml
sp1/program/src/: main.rs
sp1/script/: Cargo.toml
