[package]
name = "sha256"
version = "0.1.0"
edition = "2021"

default-run = "sha256"

[dependencies]
sha256-methods = { path = "methods" }
risc0-zkvm = { version = "1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"