[package]
name = "sha256-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0.1", default-features = false, features = ['std'] }

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }